# mloader

./: .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODING_STYLE.md  FEATURES.md  LICENSE.md  README.md  setup.sh
example/: main.cxx
example/data/: cars.yml  houses.yml
examples/program/: CMakeLists.txt
inc/mloader/: asset.hxx  database.hxx  loader.hxx  resource.hxx  scanner.hxx
inc/mloader/database/: base.hxx  file.hxx  registry.hxx
inc/mloader/defs/: definition.hxx  registry.hxx
inc/mloader/extension/: extension.hxx  system.hxx
inc/mloader/extension/archive/: constants.hxx  decoder.hxx  encoder.hxx
src/: asset.cxx  mpacker.cxx  resource.cxx  scanner.cxx
src/database/: file.cxx  registry.cxx
src/defs/: registry.cxx
src/extension/: extension.cxx
tests/: main.cxx  test_asset.cxx  test_binary_db.cxx  test_filesystem_db.cxx  test_loader.cxx  test_resource.cxx  test_scanner.cxx
